--- a/index.html
+++ b/index.html
@@ -1,20 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ratings Card - HTML5 & CSS3 | UI Practice</title>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-<!--
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!--
 
 UI Design by:
 https://uidesigndaily.com/posts/figma-ratings-card-review-rating-day-1113
 
 -->
 
-</body>
+    <div class="container">
+      <header>
+        <h1>Customer reviews</h1>
+
+        <div class="full-rating">
+          <div class="stars-sec">
+            <ion-icon class="icon-star" name="star"></ion-icon>
+            <ion-icon class="icon-star" name="star"></ion-icon>
+            <ion-icon class="icon-star" name="star"></ion-icon>
+            <ion-icon class="icon-star" name="star"></ion-icon>
+            <ion-icon class="icon-star" name="star"></ion-icon>
+          </div>
+
+          <p>
+            4.7 out of 5
+          </p>
+        </div>
+
+        <p>
+          40 customer ratings
+        </p>
+      </header>
+
+      <main>
+        <div class="rating">
+          <p class="r-s">5 star</p>
+          <div class="meter">
+            <span style="width: 84%;"></span>
+          </div>
+          <p class="r-p">84%</p>
+        </div>
+        <div class="rating">
+          <p class="r-s">4 star</p>
+          <div class="meter">
+            <span style="width: 25%;"></span>
+          </div>
+          <p class="r-p">9%</p>
+        </div>
+        <div class="rating">
+          <p class="r-s">3 star</p>
+          <div class="meter">
+            <span style="width: 17%;"></span>
+          </div>
+          <p class="r-p">4%</p>
+        </div>
+        <div class="rating">
+          <p class="r-s">2 star</p>
+          <div class="meter">
+            <span style="width: 10%;"></span>
+          </div>
+          <p class="r-p">2%</p>
+        </div>
+        <div class="rating">
+          <p class="r-s">1 star</p>
+          <div class="meter">
+            <span style="width: 8%;"></span>
+          </div>
+          <p class="r-p">1%</p>
+        </div>
+
+        <p class="link">How do we calculate ratings?</p>
+      </main>
+    </div>
+  </body>
 </html>
